--- a/app/views/release/index.html.erb
+++ b/app/views/release/index.html.erb
@@ -1,6 +1,6 @@
 <div id="about" class="col-sm-12 col-md-12">
   <div class="release_title">
-    <h2>Homosaurus Releases</h2>
+    <h2><%= t("menu.releases") %></h2>
   </div>
   <div class="info_section">
     <ul class="list-group list-group-flush">
