--- a/app/views/vocabulary/show.html.erb
+++ b/app/views/vocabulary/show.html.erb
@@ -9,7 +9,6 @@
   %>
 
 <h2><%= @homosaurus_obj.pref_label %> (<%= @homosaurus_obj.uri %>)</h2>
-<h3>Last Edited: V. <%= @homosaurus_obj.get_edit_requests()[0].version_release.release_identifier %></h3>
 <% if @homosaurus_obj.visibility == "deleted" %>
   <div class="alert alert-danger" role="alert">
     This term has been removed from the vocabulary and is no longer in use.<br />
@@ -22,22 +21,22 @@
 <% end %>
 <p><div style="clear:both;">
   <% if params[:from_q].present? %>
-      <%= button_to "Back To Search Results", vocabulary_search_results_path(id: @homosaurus_obj.vocabulary_identiffier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary', style:"float:left;", params: { :q=>params[:from_q]} %>
+      <%= button_to t("term.back_to_search"), vocabulary_search_results_path(id: @homosaurus_obj.vocabulary_identiffier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary', style:"float:left;", params: { :q=>params[:from_q]} %>
   <% else %>
-      <%= button_to "Back To Index", vocabulary_index_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
+      <%= button_to t("term.back_to_index"), vocabulary_index_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
   <% end %>
-  <%= button_to "View History", vocabulary_term_history_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: "btn btn-outline-secondary" %>
+  <%= button_to t("term.view_history"), vocabulary_term_history_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: "btn btn-outline-secondary" %>
   <% if current_user.present? %>
-    <%= button_to "View Discussion", vocabulary_term_discussion_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
+    <%= button_to t("edit_request.view_discussion"), vocabulary_term_discussion_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
   <% end %>
   <% if current_user.present? && current_user.contributor? && request.original_url.include?('/v3') %>
-      <%= button_to "Edit Term", vocabulary_term_edit_path(vocab_id: "v3", id: @homosaurus_obj.identifier), :method => "get", form_class: "#{form_class} btn-tooltip", class: 'btn btn-outline-secondary', disabled: editing_disabled, form: { "title" => editing_disabled ? "No pending releases" : ""} %>
+      <%= button_to t("term.edit_term"), vocabulary_term_edit_path(vocab_id: "v3", id: @homosaurus_obj.identifier), :method => "get", form_class: "#{form_class} btn-tooltip", class: 'btn btn-outline-secondary', disabled: editing_disabled, form: { "title" => editing_disabled ? "No pending releases" : ""} %>
     <% if @homosaurus_obj.visibility == "deleted" %>
       <%= button_to "Restore Term", vocabulary_term_restore_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => "get", form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to restore #{@homosaurus_obj.pref_label}?" } %>
     <% elsif @homosaurus_obj.visibility == "pending" %>
       <%= button_to "Delete Pending Term", vocabulary_term_delete_version_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete the unpublished #{@homosaurus_obj.pref_label}?" } %>
     <% else %>
-      <%= button_to "Delete Term", vocabulary_term_delete_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete #{@homosaurus_obj.pref_label}?" } %>
+      <%= button_to t("term.delete_term"), vocabulary_term_delete_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete #{@homosaurus_obj.pref_label}?" } %>
     <% end %>
     <% if @homosaurus_obj.visibility != "pending" %>
       <input class="btn btn-danger" type="button" value="Replace Other Term" onClick='var identifer = prompt("Enter the identifier of the term to replace with this term. This OTHER TERM will redirect to this record."); window.location="/<%=@homosaurus_obj.vocabulary_identifier%>/<%=@homosaurus_obj.identifier%>/replace/" + identifer;'>
@@ -135,7 +134,7 @@
      :values=>@homosaurus_obj.close_match_lcsh}
 %>
 
-<h3>Hierarchy Display:</h3>
+<h3><%= t("term.hierarchy_label") %></h3>
 <% if  @homosaurus_obj.broader.blank? %>
   <div style="padding-left:0px;">No Broader Term</div>
 <% else %>
