--- a/app/views/vocabulary/edit.html.erb
+++ b/app/views/vocabulary/edit.html.erb
@@ -1,3 +1,5 @@
+<% available_versions = VersionRelease.where(status: "Pending") %>
+<% disabled_versions = @term.edit_requests.reject{|er| er.vote_status != "approved"}.pluck(:version_release_id) %>
 <div class="row-padded">
   <h1>Edit</h1>
   <%= button_to "Back To Term", vocabulary_show_path(vocab_id: @vocab_id, id: params[:id]), :method => "get", class: 'btn text-bg-primary' %>
@@ -6,7 +8,7 @@
     <%= simple_form_for(@term, :url => vocabulary_term_update_path(vocab_id: @vocab_id, id: @term.identifier), :as => :term, method: :patch) do |f| %>
     <div class="input-group">
       <label class="input-group-text" for="version_release"> Version</label>
-      <%= select_tag "version_release", options_for_select(VersionRelease.where(status: "Pending").pluck(:release_identifier, :id), @release_id_num), class: "form-select", onchange: "window.location.href='#{request.original_url.split('edit')[0] + 'edit/'}' + $(this).find('option:selected').text()" %>
+      <%= select_tag "version_release", options_for_select(available_versions.pluck(:release_identifier, :id), selected: @release_id_num, disabled: disabled_versions), class: "form-select", onchange: "window.location.href='#{request.original_url.split('edit')[0] + 'edit/'}' + $(this).find('option:selected').text()" %>
     </div>
       <%= render :partial => "form_id", :locals => {:f => f, :key=>:identifier} %>
       <%= render :partial => "form", locals: {f: f} %>
