--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<nav class="navbar navbar-fixed-top navbar-expand-lg text-bg-dark" role="navigation">
+<nav class="navbar navbar-dark bg-dark navbar-fixed-top navbar-expand-lg" role="navigation">
   <div class="container">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    
     <div class="navbar-header">
-      <% if 1==0 %>
-      <div class="header_logo">
-        <%= link_to "homosaurus.info", root_path, :id => 'header_logo_link' %>
-      </div>
-      <% end  %>
-      <%= link_to "homosaurus.info", '/', class: "navbar-brand text-white" %>
+      <a class="navbar-brand">
+	<%= image_tag("homosaurus_small.png", height: '40px') %>
+      </a>
+      <%= link_to "homosaurus.org", '/', class: "navbar-brand text-white" %>
+      
       <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> -->
       <!--   <span class="sr-only">Toggle navigation</span> -->
       <!--   <span class="icon-bar"></span> -->
@@ -28,7 +25,10 @@
       <!--   <span class="icon-bar"></span> -->
       <!-- </button> -->
     </div>
-    <div id="navbar" class="collapse navbar-collapse">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navbarSupportedContent" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="nav-item"><%= link_to t("menu.home"), '/', :class => "nav-link text-white" %></li>
 
@@ -99,9 +99,6 @@
       </ul>
 
     </div><!--/.nav-collapse -->
-    <div>
-
-    </div>
   </div>
 
 </nav>
