--- a/app/views/vocabulary/search.html.erb
+++ b/app/views/vocabulary/search.html.erb
@@ -14,7 +14,7 @@
         <div class="card mb-3">
           <div class="card-header text-bg-primary">
 	    <h4 class="text-white">
-              <%= link_to term.pref_label, vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier, :from_q=>params[:q]), :class => "text-white"%>
+              <%= link_to term.pref_label_localized.data, vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier, :from_q=>params[:q]), :class => "text-white"%>
 	    </h4>
           </div>
 	  <% alt_labels = term.term_relationships.where(relation_id: Relation::Alt_label) %>
@@ -26,7 +26,7 @@
             <% end %>
             <% if descriptions %>
 	      <% descriptions.each do |d| %>
-	        <strong>Description:</strong> <%= "#{d.data}@#{d.language_id}" %>
+	        <strong>Description:</strong> <%= "#{d.data}@#{d.language_id}" %><br/>
 	      <% end %>
             <% end %>
 
