--- a/app/views/vocabulary/history.html.erb
+++ b/app/views/vocabulary/history.html.erb
@@ -1,4 +1,4 @@
-<h2> History: <%= @homosaurus_obj.pref_label %> (<%= @homosaurus_obj.uri %>)</h2>
+<h2> <%= t('term.history') %>: <%= @homosaurus_obj.pref_label_localized.data %> (<%= @homosaurus_obj.uri %>)</h2>
 <% if @homosaurus_obj.visibility == "deleted" %>
   <div class="alert alert-danger" role="alert">
     This term has been removed from the vocabulary and is no longer in use.<br />
@@ -10,7 +10,7 @@
   </div>
 <% end %>
 <p><div style="clear:both;">
-    <%= button_to "Back To Term", vocabulary_show_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left; margin-left:20px;" %>
+    <%= button_to t('discussion.back_to_term'), vocabulary_show_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left; margin-left:20px;" %>
   <% if current_user.present? && current_user.contributor? && request.original_url.include?('/v3') %>
     <% if @homosaurus_obj.visibility != "pending" %>
       <input class="btn btn-danger" style="float:left; margin-left:20px;" type="button" value="Replace Other Term" onClick='var identifer = prompt("Enter the identifier of the term to replace with this term. This OTHER TERM will redirect to this record."); window.location="/<%=@homosaurus_obj.vocabulary_identifier%>/<%=@homosaurus_obj.identifier%>/replace/" + identifer;'>
