--- a/app/views/vocabulary/index.html.erb
+++ b/app/views/vocabulary/index.html.erb
@@ -32,7 +32,7 @@
         <% if term.pref_label.blank? %>
           <%= link_to "(EMPTY)", vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier) %>
         <% else %>
-          <%= link_to term.pref_label, vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier) %>
+          <%= link_to term.pref_label_localized.data, vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier) %>
           <% end %>
 	<% if not term.translation_exists?(I18n.locale) %>
 	  <span class="badge text-bg-danger"><%= t("misc.translation_needed") %></span>
@@ -45,7 +45,7 @@
       <% if term.pref_label.blank? %>
         <%= link_to "(EMPTY)", vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier, pending_id: pending.id) %>
       <% else %>
-        <%= link_to term.pref_label, vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier, pending_id: pending.id) %>
+        <%= link_to term.pref_label_localized.data, vocabulary_show_path(vocab_id: term.vocabulary_identifier, :id => term.identifier, pending_id: pending.id) %>
       <% end %>
 
     </li>
