--- a/app/views/vocabulary/show.html.erb
+++ b/app/views/vocabulary/show.html.erb
@@ -8,7 +8,7 @@
   vr_relations = @homosaurus_obj.get_relationships_at_version_release(latest_vr_id, full_lang = true)
   %>
 
-<h2><%= @homosaurus_obj.pref_label %> (<%= @homosaurus_obj.uri %>)</h2>
+<h2><%= @homosaurus_obj.pref_label_localized.data %> (<%= @homosaurus_obj.uri %>)</h2>
 <% if @homosaurus_obj.visibility == "deleted" %>
   <div class="alert alert-danger" role="alert">
     This term has been removed from the vocabulary and is no longer in use.<br />
@@ -21,7 +21,7 @@
 <% end %>
 <p><div style="clear:both;">
   <% if params[:from_q].present? %>
-      <%= button_to t("term.back_to_search"), vocabulary_search_results_path(id: @homosaurus_obj.vocabulary_identiffier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary', style:"float:left;", params: { :q=>params[:from_q]} %>
+      <%= button_to t("term.back_to_search"), vocabulary_search_results_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary', style:"float:left;", params: { :q=>params[:from_q]} %>
   <% else %>
       <%= button_to t("term.back_to_index"), vocabulary_index_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
   <% end %>
@@ -141,15 +141,15 @@
 <% else %>
   <% vr_relations[Relation::Broader].each do |broader| %>
     <% relation_obj = Term.find_by(id: broader[1].to_i) %>
-    <div style="padding-left:0px;"><%= link_to "#{relation_obj.pref_label}", vocabulary_show_path(vocab_id: relation_obj.vocabulary_identifier, id: relation_obj.identifier)%></div>
+    <div style="padding-left:0px;"><%= link_to "#{relation_obj.pref_label_localized.data}", vocabulary_show_path(vocab_id: relation_obj.vocabulary_identifier, id: relation_obj.identifier)%></div>
   <% end %>
 <% end %>
 
-<div style="padding-left:40px;"><strong><%=  @homosaurus_obj.pref_label %></strong></div>
+<div style="padding-left:40px;"><strong><%=  @homosaurus_obj.pref_label_localized.data %></strong></div>
 
 <%  vr_relations[Relation::Narrower].each do |narrower| %>
   <% relation_obj = Term.find_by(id: narrower[1].to_i) %>
-  <div style="padding-left:80px;"><%= link_to "#{relation_obj.pref_label}", vocabulary_show_path(vocab_id: relation_obj.vocabulary_identifier, id: relation_obj.identifier)%></div>
+  <div style="padding-left:80px;"><%= link_to "#{relation_obj.pref_label_localized.data}", vocabulary_show_path(vocab_id: relation_obj.vocabulary_identifier, id: relation_obj.identifier)%></div>
 <% end %>
 
 <br />
