--- a/app/views/vocabulary/index.html.erb
+++ b/app/views/vocabulary/index.html.erb
@@ -25,7 +25,7 @@
   </ul>
 <% end %>
 
-<h4><%= t("vocab.current_terms") %> <%= I18n.locale %></h4>
+<h4><%= t("vocab.current_terms") %></h4>
 <ul>
   <% @terms.each do |term| %>
       <li>
